# babelfish

./: Cargo.toml  LICENSE  README.md
assets/: conjure_test.json  join_test.json  match_move.json  match_split.json  natty_join_test.json  new_erd.json  project_test.json  rel.json  schema.json  schema1.json  simple_schema.json  simple_schema1.json  simple_test.json  simple_test1.json  test.json  test1.json  test2.json  test2_left_schema1.json  test2_schema1.json  test3_schema1.json  test_projects.json
ast/: Cargo.toml
ast/src/: conjunctive_normal_form.rs  conjunctive_normalize.rs  custom_serde.rs  definitions.rs  lib.rs  negative_normalize.rs  serde_test.rs  uses.rs
ast/src/conjunctive_normalize_tests/: mod.rs
ast/src/negative_normalize_tests/: match_field.rs  match_logical.rs  mod.rs  negative_normal_form.rs  tagged_ops.rs  untagged_ops.rs
babelfish/: Cargo.toml
babelfish-cli/: Cargo.toml
babelfish-cli/src/: main.rs
babelfish/src/: assemble_rewrite.rs  augmented_project_rewrite.rs  conjure_rewrite.rs  erd.rs  erd_graph.rs  join_rewrite.rs  lib.rs  match_movement_rewrite.rs  natty_join_rewrite.rs
mongosql-datastructures/: Cargo.toml
mongosql-datastructures/src/: binding_tuple.rs  lib.rs  unique_linked_hash_map.rs
schema/: Cargo.toml
schema/src/: definitions.rs  jaccard_test.rs  lib.rs  mod.rs  test.rs
schema/src/json_schema/: mod.rs  test.rs
visitgen/: Cargo.toml
visitgen-test/: Cargo.toml
visitgen-test/src/module/: mod.rs
visitgen-test/src/module/submodule/: ast.rs  mod.rs  test.rs
visitgen/src/: analysis.rs  gen_ref_visitor_trait.rs  gen_ref_walk_implementaion.rs  gen_visitor_trait.rs  gen_walk_implementations.rs  lib.rs  test.rs  util.rs
