[workspace]
resolver = "2"

members = [
    "ast",
    "babelfish",
    "babelfish-cli",
    "mongosql-datastructures",
    "schema",
    "visitgen",
    "visitgen-test",
]

[workspace.dependencies]
mongodb = "3"
thiserror = "2"
serde_yaml = "0"
serde = "1"
serde_json = "1"
chrono = "0"
regex = "1"
lazy_static = "1"
quote = "1"
syn = "2"
itertools = "0"
rand = "0"
tokio = "1"
serde_stacker = "0"
clap = { version = "4", features = ["derive"] }
dialoguer = "0"
anyhow = "1"
indicatif = "0"
tracing = "0"
tracing-subscriber = "0"
glob = "0"
futures = "0"
linked-hash-map = "0"
base64 = "0.22.1"
bson = "2"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
