[package]
name = "ast"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true, features = ["chrono-0_4"] }
linked-hash-map = { workspace = true, features = ["serde_impl"] }
visitgen = { path = "../visitgen" }

[features]
