[package]
name = "babelfish"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ast = { path = "../ast" }
thiserror = { workspace = true }
tailcall = { workspace = true }
linked-hash-map = { workspace = true }
petgraph = { workspace = true }
